sass/_colors.scss
// Color system

/* Primary theme color */
$primary-color: hsl(95, 80%, 5%);
// Color of logo
$text-on-primary-color: hsl(95, 60%, 63%);
$hovered-text-on-primary-color: hsl(95, 60%, 40%);

/* Link colors */
$link-color: hsl(95, 60%, 40%);
$hovered-link-color: hsl(95, 60%, 20%);

/* Secondary color: the background body color */
$secondary-color: hsl(40, 40%, 95%);
$text-on-secondary-color: hsl(10, 26%, 26%);
$hovered-text-on-secondary-color: hsl(10, 26%, 10%);

/* Boxes for TOC and blog cards */
$box-color: hsl(40, 45%, 90%);

/* Shows where you are in the article */
$toc-highlight-text-color: hsl(10, 40%, 20%);

/* Footer body color */
$footer-color: $primary-color;
$footer-text-color: hsl(145, 10%, 90%);

